--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>프론트엔드 개발자 구민정</title>
+	<title>AI 개발자 장현종</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -94,7 +94,7 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>장현종</span></li>
 								<li class="d-flex"><span>Address:</span> <span>부산광역시 동래구 사직동</span></li>
-								<li class="d-flex"><span>Email:</span> <span>lezelamu@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span>lezelamu@naver.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+82-10-5418-0769</span></li>
 							</ul>
 						</div>
@@ -106,7 +106,7 @@
 								<span>Project complete</span>
 							</p>
 							<p><a target="_blank"
-									href="https://sulky-frown-580.notion.site/JANG-HYUNJONG-Resume-346c461649ca4370851c3f59774ff1e7?pvs=25"
+									href="\images\동서대_장현종 resume2 1.pdf"
 									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
@@ -122,7 +122,7 @@
 					<div class="block-18 shadow">
 						<div class="text">
 							<strong class="number" data-number="365">0</strong>
-							<span>코딩한 일수</span>
+							<span>경력</span>
 						</div>
 					</div>
 				</div>
@@ -137,7 +137,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="2">0</strong>
+							<strong class="number" data-number="4">0</strong>
 							<span>Happy Customers</span>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 					<div class="block-18 shadow">
 						<div class="text">
 							<strong class="number" data-number="2">0</strong>
-							<span>Cups of coffee</span>
+							<span>Major</span>
 						</div>
 					</div>
 				</div>
@@ -177,8 +177,8 @@
 							</div>
 							<div class="text pl-3">
 								<span class="date">2019-2024</span>
-								<h2>소프트웨어공학</h2>
-								<span class="position">Dongseo Global Univercity</span>
+								<h2>소프트웨어공학 전공</h2>
+								<span class="position">Dongseo Global University</span>
 								<p>4년간의 소프트웨어 전공 특화 교육을 통해 개발자로써 성장할 수 있었으며, Computer Science 기초 지식을 통해 올바른
 									방향으로 성장할 수 있는 개발자가 되었습니다. </p>
 							</div>
@@ -190,20 +190,9 @@
 							<div class="text pl-3">
 								<span class="date">2023-2024</span>
 								<h2>AI 공학 복수전공</h2>
-								<span class="position">Dongseo Global Univercity</span>
+								<span class="position">Dongseo Global University</span>
 								<p>2년간 강화학습, 지도학습 등의 이론을 배우고, 이를 실습함과 동시에, 여러 프로젝트를 진행함으로써
 									인공지능을 활용하고 사용할 줄 아는 개발자가 되었습니다.</p>
-							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
-							</div>
-							<div class="text pl-3">
-								<span class="date">2022-2023</span>
-								<h2>퍼듀대학교 인공지능 연구원</h2>
-								<span class="position">Purdue University(US)</span>
-								<p>약 3개월동안 전공 교수와 협업해 논문 서치, 아이디어 구체화 등에 대한 교육을 받고 이를 활용해 개발 및 논문 작성을 진행하였습니다.</p>
 							</div>
 						</div>
 					</div>
@@ -224,7 +213,7 @@
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									<div> - 논문 서치 및 연구를 통한 과제 달성 방법 서치 및 정리</div>
-									<div> - 세브란스 병원 교수 및 실무자들과의 지속적인 미팅</div>
+									<div> - 세브란스 병원 교수 및 실무자들과의 지속적인 미팅 (R&D 연구원)</div>
 									<div> - 4가지 이상의 앱&웹 프로젝트 진행 및 개발</div>
 									<div> - AWS 서버 호스팅 및 로컬(데스크탑) 서버 구축</div>
 								</div>
@@ -366,9 +355,9 @@
 								<div class="progress-wrap ftco-animate">
 									<h3>HTML5</h3>
 									<div class="progress">
-										<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-											aria-valuemin="0" aria-valuemax="100" style="width:95%">
-											<span>95%</span>
+										<div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60%</span>
 										</div>
 									</div>
 								</div>
@@ -377,16 +366,16 @@
 								<div class="progress-wrap ftco-animate">
 									<h3>CSS3</h3>
 									<div class="progress">
-										<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-											aria-valuemin="0" aria-valuemax="100" style="width:90%">
-											<span>90%</span>
+										<div class="progress-bar color-4" role="progressbar" aria-valuenow="50"
+											aria-valuemin="0" aria-valuemax="100" style="width:50%">
+											<span>50%</span>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>WordPress</h3>
+									<h3>Matlab</h3>
 									<div class="progress">
 										<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 											aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -397,11 +386,11 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SEO</h3>
+									<h3>kotlin</h3>
 									<div class="progress">
-										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+										<div class="progress-bar color-6" role="progressbar" aria-valuenow="40"
+											aria-valuemin="0" aria-valuemax="100" style="width:40%">
+											<span>40%</span>
 										</div>
 									</div>
 								</div>
@@ -415,25 +404,22 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019.09-2020.08</span>
+								<span class="date">2022.12-2023.02</span>
 								<div class="d-flex">
-									<h2>웰리스 여행 상품 예약 플랫폼 개발</h2>
+									<h2>Deep learning based real time UAV detection using smartphones as Edge Computing device</h2>
 									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
-											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
+											href="https://github.com/K-SW-SWATTER/KSW-Purdue">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a
+											href="/images/as1.png">스크린샷</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="https://www.wellytravel.com/">Link</a>
+											href="https://github.com/K-SW-SWATTER/KSW-Purdue/releases/tag/v1.0">Download</a>
 									</div>
 								</div>
-								<span class="position">주식회사 더라피스</span>
-								<div> <b class="text-dark">기술 스택 : </b>React, Typescript, Next.js, Styled-Component,
-									MobX
+								<span class="position">Purdue University</span>
+								<div> <b class="text-dark">기술 스택 : </b>JAVA, Cotlin, Python, C++, Jupyter Notebook
 								</div>
-								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 SNS 로그인, 상품 리스트 확인, 상품 상세 정보
-									확인, 예약 관리, 결제 </div>
-								<p> React </p>
+								<div> <b class="text-dark">주요 기능 : </b> ML 학습으로 스마트폰 애플리케이션을 통해 드론 탐지 </div>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -441,41 +427,59 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Top 5 LeaderShip Exellence Winner</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">2024.03-2024.06</span>
+								<div class="d-flex">
+									<h2>딥러닝을 통한 음식 성분량 도출</h2>
+									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
+											class="btn btn-outline-secondary"
+											href="https://github.com/HyeonjongJang/food2">Github</a>&nbsp;<a
+											class="btn btn-outline-secondary" target="_blank"
+											href="/images/as2.png">스크린샷</a>&nbsp;</a>
+											</a>
+									</div>
+								</div>
+								<span class="position">Dongseo University</span>
+								<div> <b class="text-dark">기술 스택 : </b>Python, Cotlin, Dart
+								</div>
+								<div> <b class="text-dark">주요 기능 : </b> 딥러닝 학습으로 애플리케이션을 활용해 음식 촬영 및 성분량 안내 </div>
 							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						</div><div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Top 4 Web Tester</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">2024.01-2023.06</span>
+								<div class="d-flex">
+									<h2>구글 이미지 크롤링 프로그램</h2>
+									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
+											class="btn btn-outline-secondary"
+											href="https://github.com/HyeonjongJang/Crawling">Github</a>&nbsp;<a
+											class="btn btn-outline-secondary" target="_blank"
+											href="/images/as3.jpg">스크린샷</a>&nbsp;</a>
+									</div>
+								</div>
+								<span class="position">Dongseo University</span>
+								<div> <b class="text-dark">기술 스택 : </b>Python
+								</div>
+								<div> <b class="text-dark">주요 기능 : </b> .csv 파일에 카테고리 id, 구분, 레시피 번호, 레시피명 등을 작성하고 실행 시 자동으로 관련 이미지 다운로드  </div>
 							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						</div><div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Art &amp; Creative Director</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">2023.03-2023.06</span>
+								<div class="d-flex">
+									<h2>vegechecker</h2>
+									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
+											class="btn btn-outline-secondary"
+											href="https://github.com/HyeonjongJang/vegechecker">Github</a>&nbsp;</a>
+									</div>
+								</div>
+								<span class="position">Dongseo University</span>
+								<div> <b class="text-dark">기술 스택 : </b>JAVA
+								</div>
+								<div> <b class="text-dark">주요 기능 : </b> 바코드 인식을 통해 식품 성분 분석을 대신 해주는 어플리케이션 개발 </div>
 							</div>
 						</div>
 					</div>
@@ -483,9 +487,14 @@
 			</div>
 		</div>
 	</section>
+  <section>
 
 
-	<section class="ftco-section ftco-project">
+
+
+  </section>
+
+	<!-- <section class="ftco-section ftco-project">
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
@@ -629,7 +638,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
 		<div class="overlay"></div>
@@ -662,7 +671,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>성남시 분당구 정자동</p>
+							<p>부산시 동래구 사직동</p>
 						</div>
 					</div>
 				</div>
@@ -673,7 +682,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
-							<p><a href="tel://1234567920">+ 010 4277 1234</a></p>
+							<p><a href="tel://1234567920">+ 010 5418 0769</a></p>
 						</div>
 					</div>
 				</div>
@@ -684,7 +693,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:info@yoursite.com">cookie00421@gmail.com</a></p>
+							<p><a href="mailto:info@yoursite.com">lezelamu@gmail.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -695,7 +704,8 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a href="#">yoursite.com</a></p>
+							<p><a href="#">https://github.com/
+								HyeonjongJang</a></p>
 						</div>
 					</div>
 				</div>
