--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:info@yoursite.com">lezelamu@gmail.com</a></p>
+							<p><a href="mailto:info@yoursite.com">lezelamu@naver.com</a></p>
 						</div>
 					</div>
 				</div>
