--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<span>Project complete</span>
 							</p>
 							<p><a target="_blank"
-									href="\images\동서대_장현종 resume2 1.pdf"
+									href="/images/동서대_장현종 resume2 1.pdf"
 									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
