--- a/index.html
+++ b/index.html
@@ -521,8 +521,135 @@
 								<h2 style="font-weight: bold;">Freshman Projects</h2>
 								<ul>
 									<li>
-										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">프로젝트 A: 식품 성분 분석 어플리케이션</h4>
-										<p class="project-description" style="display: none;">이 프로젝트는 바코드 인식을 통해 식품 성분 분석을 대신 해주는 어플리케이션 개발을 목표로 하였습니다. 주요 기능: 사용자 친화적인 UI/UX 디자인, 실시간 바코드 스캔 기능, 식품 성분 데이터베이스와의 연동.</p>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">동서글로벌영어프로그램 (DGEP)</h4>
+										<p class="project-description" style="display: none;">1년간 집중 영어교육 및 미국 소재 대학 문화체험 기회</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">MPLab 연구회 활동</h4>
+										<p class="project-description" style="display: none;">부산대학교병원 주차장 인건비 감축을 위한 주차 안내 자동화 연구 등 프로그램 참여</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">기술보증기금-우수기술기업 체험 및 창업교육 참가</h4>
+										<p class="project-description" style="display: none;">랩몬스터 기업 설명, 레이저커팅 및 3D 프린트 실습</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">학생 포트폴리오 교육</h4>
+										<p class="project-description" style="display: none;">포트폴리오 우수 사례 분석과 전문가의 지도를 통하여 학생들이 스스로 포트폴리오를 체계적으로 작성하고 관리할 수 있도록 도와주는 프로그램</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">공학 글쓰기 교육(과학기술과 글쓰기)</h4>
+										<p class="project-description" style="display: none;">과학기술 글쓰기를 위한 방법과 다양한 사례 기반 문장 이해 및 실습, 보고서, 논문 등 글을 쓰기 위한 전략과 전개 방법 등 공대생들의 과학기술 글쓰기 방법을 알려주는 프로그램</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019 실전창업체험 프로젝트</h4>
+										<p class="project-description" style="display: none;">창의 아이디어/아이템의 구체화를 지원하고 체계적으로 관리</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019 비즈쿨 프로그램</h4>
+										<p class="project-description" style="display: none;">비즈쿨 사업을 통해 청소년의 기본적인 기업가 정신 고취 및 창업마인드 함양</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">Peer Counseling 프로그램-멘티</h4>
+										<p class="project-description" style="display: none;">심리사회적으로 도움이 필요한 동서 학우를 대상으로 조력활동을 전개하는 정서지원멘토링 프로그램 이수</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019-1학기 One-day Trip</h4>
+										<p class="project-description" style="display: none;">한국인 재학생과 외국인 재학생이 부담 없이 만나 교류</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019-2학기 One-day Trip</h4>
+										<p class="project-description" style="display: none;">한국인 재학생과 외국인 재학생이 부담 없이 만나 교류</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019년 국제청소년리더 교류지원사업</h4>
+										<p class="project-description" style="display: none;">다국적 학생들이 한 조를 이루어, 그 테마에 맞는 한국 산업·문화·역사 탐방을 직접 기획하여 운영 후 발표</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019-2 DSU Buddy Program</h4>
+										<p class="project-description" style="display: none;">외국인유학생의 1:1 매칭 이후 도우미 역할.(멘토)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">연계프로그램-Junior 대학생을 위한 철드는 여행</h4>
+										<p class="project-description" style="display: none;">공학교육혁신센터 연계프로그램으로 한국철강협회(동남권 SC, Sector Council, 인적자원개발협의체)의 『 Junior 대학생을 위한 철드는 여행 』 참여</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">연계프로그램-BEMS(건물에너지관리시스템) 전문가양성과정</h4>
+										<p class="project-description" style="display: none;">공학교육혁신센터 연계프로그램으로 (사)한국BEMS협회의 『 BEMS(건물에너지관리시스템) 전문가 양성 교육과정 』 참여 </p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">말레이시아 UTAR 한국문화체험연수 프로그램</h4>
+										<p class="project-description" style="display: none;">동서대학교 외국어교육원이 주관한 말레이시아 한국문화체험연수 프로그램에서 봉사학생으로써 통역 맡아 프로그램 진행</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019-2 International Camp+</h4>
+										<p class="project-description" style="display: none;">외국인 학생들과 한국인 학생들이 함께 프로젝트 진행
+											(참고링크 : https://www.facebook.com/DongseoUniversity/videos/2019-international-camp/519002365343284/)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">LINC+ 창업동아리지원프로그램</h4>
+										<p class="project-description" style="display: none;">CLOUD 동아리의 팀장으로써 활동.</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">DSU Make 창업경진대회</h4>
+										<p class="project-description" style="display: none;">캠프 참여 중 창업멘토의 조언을 받고 이를 통해 창업동아리 아이템 완성</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">동서글로벌영어프로그램 Speech Contest</h4>
+										<p class="project-description" style="display: none;">1년간 교육받은 내용을 토대로 english pregentation 진행. 대상 수여</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2019 DSU 부산스러운 해커톤 대회</h4>
+										<p class="project-description" style="display: none;">동서대학교 재학생을 대상으로 부산지역의 문제점들을 지속가능한 발전목표(SDGs)에 대한 심층적 이해와 협업을 통한 문제해결능력 향상</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">제4회 부산 ICT 융합 해커톤 대회 참여</h4>
+										<p class="project-description" style="display: none;">CLOUD팀으로 참여하여 아두이노를 통해 미세먼지에 따라 색이 바뀌는 무드등 제작.</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">Link+ SW Challenge</h4>
+										<p class="project-description" style="display: none;">2019_SW 챌린지 공모전 참여</p>
 									</li>
 								</ul>
 							</div>
@@ -532,8 +659,74 @@
 								<h2 style="font-weight: bold;">Sophomore Projects</h2>
 								<ul>
 									<li>
-										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">프로젝트 C: 개인 일정 관리 애플리케이션</h4>
-										<p class="project-description" style="display: none;">이 프로젝트는 개인 일정 관리 애플리케이션 개발을 목표로 하였습니다. 주요 기능: 일정 추가 및 수정, 알림 기능, 사용자 친화적인 UI.</p>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2022년 해외교육 프로그램(필리핀UC대학교)</h4>
+										<p class="project-description" style="display: none;">단체 그룹 수업 방식(화상강의)의 SW분야 전문가 전공·교양 강의 프로그램</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2022년 해외교육 프로그램(K-SW스퀘어 겨울)</h4>
+										<p class="project-description" style="display: none;">미 현지 대학생 및 SW산업계 엔지니어와의 캡스톤 디자인 프로젝트 수행을 통한 창의적 문제해결 능력 및 프로젝트 관리기법 등을 교육.</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2022년 국제청소년리더 교류지원사업</h4>
+										<p class="project-description" style="display: none;">다국적 대학생들 간 교류활동을 지원하여 글로벌 역량을 강화하고 국내에 유학하고 있는 유학생의 한국문화, 역사, 산업에 대한 이해도를 향상시켜 국가 간 우호를 증진하기 위함</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">동아시아 글로벌리더특강</h4>
+										<p class="project-description" style="display: none;">인문학 특강 참여</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">Asia Summer Program 2022 in Josai International Univercity</h4>
+										<p class="project-description" style="display: none;">Josai International 대학에서 주관하는 ASP 2022 통해 영어 수업과 일본어 수업 진행</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">제2회 메이커 클래스 창작전시회 출품</h4>
+										<p class="project-description" style="display: none;">디지털 기술혁명의 시대에 교양교육의 혁신과 4차산업 수업 혁명으로서 ‘Learning by Making’을 구현함과 아울러 학생들로 하여금 디자인 사고와 자기주도적 학습력을 강화</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">달란트 e-포트폴리오 공모전</h4>
+										<p class="project-description" style="display: none;">동서대학교 재학생들을 대상으로 4년간의 달란트 활동을 등록하는 '달란트 e-포트폴리오 공모전'</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">DSU,_Go_Global 프로그램 참여</h4>
+										<p class="project-description" style="display: none;">영어권 외국인과의 소통 및 협력 (멘토)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">AI+X 융합프로젝트 참여</h4>
+										<p class="project-description" style="display: none;">AI+X융합연구소 소속 교수와 SW중심학과 + 비SW학과 학생 간 연구팀 구성을 통해 다양한 주제의 융합프로젝트 진행</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">AI 창업 릴레이 특강</h4>
+										<p class="project-description" style="display: none;">포즈 예측 AI를 활용한 애니메이션에 대한 특강 등 일부 특강 참여</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">데이터분석 준전문가(ADsP) 자격증 특강</h4>
+										<p class="project-description" style="display: none;">ADsP 자격증의 성격 및 취득 절차 안내, 시험 준비 유의사항 및 출제 경향 분석, ADsP 이론강의, ADsP R 프로그램 실습 강의</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2022년 자격증 취득 프로그램 (자바 국제자격증)</h4>
+										<p class="project-description" style="display: none;">자바 국제자격증 (Oracle’s JAVA SE Programmer I certification(OCAJP)) 시험 대비 특강</p>
 									</li>
 								</ul>
 							</div>
@@ -543,8 +736,72 @@
 								<h2 style="font-weight: bold;">Junior Projects</h2>
 								<ul>
 									<li>
-										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">프로젝트 E: 전자 상거래 웹사이트</h4>
-										<p class="project-description" style="display: none;">이 프로젝트는 전자 상거래 웹사이트 개발을 목표로 하였습니다. 주요 기능: 제품 목록, 장바구니, 결제 시스템.</p>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">	인공지능 개발자 정규직 개발자 경력 (ESUPARTNERS) </h4>
+										<p class="project-description" style="display: none;">
+											• 논문 탐색 및 리서치를 통한 프로젝트 수행 방법 탐색 및 정리 
+											• 세브란스 병원 교수 및 실무자와의 지속적인 미팅 (R&D 연구원) 
+											• 4개 이상의 앱 및 웹 프로젝트 진행 및 개발 
+											• AWS 서버 호스팅 및 로컬(데스크톱) 서버 구축 </p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">	2023-1학기 BDAD 학습공동체</h4>
+										<p class="project-description" style="display: none;">튜터와 튜티가 학습공동체 팀을 이뤄 한 가지 주제를 중심으로 함께 학습하는 스터디그룹(튜터)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2023-1학기 우수연구회</h4>
+										<p class="project-description" style="display: none;">교내 전공 연구회의 심화 학습활동을 지원하고 우수연구회의 사례를 공유하는 프로그램 (참여)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">대학생 문화 교류회</h4>
+										<p class="project-description" style="display: none;">	동서대 재학생 누구나 참여할 수 있는 일본인, 중국인학생과 한국어로 소통하는 3국 대학생 캠퍼스라이프 문화 교류 프로그램</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2023-2학기 BDAD 학습공동체</h4>
+										<p class="project-description" style="display: none;">이 프로젝트는 인공지능을 활용한 추천 시스템 개발을 목표로 하였습니다. 주요 기능: 사용자 행동 분석, 개인 맞춤형 추천 제공.</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2023-2학기 TOPCIT 평가 지원 프로그램</h4>
+										<p class="project-description" style="display: none;">ICT산업 종사자가 현장에서의 업무를 성공적으로 수행하는데 요구되는 핵심 역량을 진단하는 TOPCIT 교육 및 응시 지원</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">달란트 e-포트폴리오 경진대회</h4>
+										<p class="project-description" style="display: none;">	동서대학교 재학생들을 대상으로 N년간의 달란트 활동을 등록하는 '달란트 e-포트폴리오 경진대회'</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2023-1 DSU Buddy Program+</h4>
+										<p class="project-description" style="display: none;">외국인과 1대1 멘토로써 학교생활 및 한국어 수업 전반 도움 제공</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">SW가치확산 봉사동아리 보듬잇(IT)</h4>
+										<p class="project-description" style="display: none;">자원봉사단 Bodum-it 소프트웨어 보조강사 (조형여자예술고등학교) </p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2023 인도네시아 창의충전소</h4>
+										<p class="project-description" style="display: none;">2023년도 인도네시아 글로벌 엔지니어링 자원봉사 (부산대학교)</p>
+									</li>
+								</ul>
+								<ul>
+									<li>
+										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">한국장학재단 국가우수장학금(이공계)</h4>
+										<p class="project-description" style="display: none;">국가우수장학금(이공계) 통해 2년간 전액장학금 수령</p>
 									</li>
 								</ul>
 							</div>
@@ -552,12 +809,84 @@
 							<!-- Senior Projects -->
 							<div id="senior-projects" class="project-group" style="display: none;">
 								<h2 style="font-weight: bold;">Senior Projects</h2>
-								<ul>
-									<li>
-										<h4 class="project-title" style="cursor: pointer; font-size:0.9em">프로젝트 G: 인공지능 기반 추천 시스템</h4>
-										<p class="project-description" style="display: none;">이 프로젝트는 인공지능을 활용한 추천 시스템 개발을 목표로 하였습니다. 주요 기능: 사용자 행동 분석, 개인 맞춤형 추천 제공.</p>
-									</li>
-								</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">AI_Research_Festival</h4>
+											<p class="project-description" style="display: none;">연구내용 작성 및 발표 통해 연구 방향성 재정립 및 피드백 수용</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">온라인 자격증 프로그램</h4>
+											<p class="project-description" style="display: none;">온라인 캠퍼스에서 개설중인 기술자격, 전문자격, 세무/회계/ERP 등 교육 강의를 수강하고, 수강 교육 또는 관심 직무, 직종 관련 대외활동을 실시하여 구직 능력 향상 프로그램</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">전공타파 직무분석 - 진로성향진단을 통한 성공취업 특강</h4>
+											<p class="project-description" style="display: none;">직무선호도검사를 통한 자기분석 및 취업역량강화를 위한 입사지원서 작성과 면접 기술 습득을 위한 특강</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">온라인 청년 미래 직진 프로그램(동영상 시청)</h4>
+											<p class="project-description" style="display: none;">국가우수장학금(이공계) 통해 2년간 전액장학금 수령</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">생성형 AI 활용전략 실무교육 “생성형 AI 시대, 공학도의 필수 스킬을 업그레이드하라!”</h4>
+											<p class="project-description" style="display: none;">최신 생성형 AI를 활용한 텍스트, 이미지, 영상 생성 방법 등 분야별 대표적인 생성 모델 학습 및 생성형 AI 기술을 활용한 문제 해결 프로젝트 수행</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024-1학기 TOPCIT 평가 지원 프로그램</h4>
+											<p class="project-description" style="display: none;">ICT산업 종사자가 현장에서의 업무를 성공적으로 수행하는데 요구되는 핵심 역량을 진단하는 TOPCIT 교육 및 응시 지원</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024년 Github 쇼케이스(부제: Show Me Your Portfolio)</h4>
+											<p class="project-description" style="display: none;">교과목 연계 프로젝트 또는 개별 진행 프로젝트 기반 Github 활동 계정을 관리하며 우수한 계정을 선발하는 경진대회</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024-1학기 BDAD 학습공동체</h4>
+											<p class="project-description" style="display: none;">튜터와 튜티가 학습공동체 팀을 이뤄 한 가지 주제를 중심으로 함께 학습하는 스터디그룹</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024-2학기 BDAD 학습공동체</h4>
+											<p class="project-description" style="display: none;">튜터와 튜티가 학습공동체 팀을 이뤄 한 가지 주제를 중심으로 함께 학습하는 스터디그룹</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">우수기업 취업 졸업생 초청 특강(소프트웨어학과)</h4>
+											<p class="project-description" style="display: none;">우수 졸업생의 취업 준비 관련 노하우 전수(장민기 LG전자/선임연구원)</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024학년도 DSU 취업동아리</h4>
+											<p class="project-description" style="display: none;">자기주도적 취업역량강화를 위한 취업동아리 활동</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">DSU 진로 부트 취업캠프</h4>
+											<p class="project-description" style="display: none;">	분야별 직무분석 및 현직자와의 만남을 통해 명확한 목표 설정 후 취업 계획 수립을 위한 취업캠프</p>
+										</li>
+									</ul>
+									<ul>
+										<li>
+											<h4 class="project-title" style="cursor: pointer; font-size:0.9em">2024학년도 온라인 학습전략특강 `대학생을 위한 기초학습법`</h4>
+											<p class="project-description" style="display: none;">	기초학습법 시리즈-자기주도 학습역량 강화를 위한 학습전략특강</p>
+										</li>
+									</ul>
 							</div>
 							
 							<button id="back-to-list">Back to list</button>
